Add crossOrigin attribute to images to fix Safari privacy protection prompt

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
   <!-- Parallax background images -->
   <div class="parallax-image parallax-left">
-    <img src="other_media/laser_bryan_2.png" alt="Laser Bryan" />
+    <img src="other_media/laser_bryan_2.png" alt="Laser Bryan" crossorigin="anonymous" />
   </div>
   <div class="parallax-image parallax-right">
-    <img src="other_media/laser_bryan_1.png" alt="Laser Bryan" />
+    <img src="other_media/laser_bryan_1.png" alt="Laser Bryan" crossorigin="anonymous" />
   </div>
 
   <!-- Main content -->
   <main class="main-content">
     <!-- Title -->
     <div class="title-section">
-      <img src="other_media/live_fontever.png" alt="Live Fontever" class="title-image" />
+      <img src="other_media/live_fontever.png" alt="Live Fontever" class="title-image" crossorigin="anonymous" />
       <p class="disclaimer">this is neither sponsored nor endorsed by bryan johnson, hopefully he'd lowkey find it funny tho</p>
     </div>
 
@@ -58,7 +58,7 @@
 
     <!-- FAQ section -->
     <section class="faq-section">
-      <img src="other_media/FAQ.png" alt="FAQ" class="section-title-image scroll-reveal" />
+      <img src="other_media/FAQ.png" alt="FAQ" class="section-title-image scroll-reveal" crossorigin="anonymous" />
       <div class="faq-content">
         <p class="faq-question scroll-reveal">i can't tell if you're pro or anti-bryan johnson. are you one of his sniveling obedient twitter worshipers or one of his single-braincell deniers who will be left behind in the singularity rapture?</p>
         <p class="faq-answer scroll-reveal">i am pro-bryan johnson, but not because I even particularly agree with his ideology. what do I very much respect is running mad-scientist-like experiments on yourself, not experimenting on prison populations or indigenous communities or under-informed clinical patients, like a fucking coward. we as a society should just be fucking around and finding out on our own bodies way more and I deeply appreciate this mindset.</p>
@@ -70,7 +70,7 @@
 
     <!-- Contact section -->
     <section class="contact-section">
-      <img src="other_media/contact.png" alt="CONTACT" class="section-title-image scroll-reveal" />
+      <img src="other_media/contact.png" alt="CONTACT" class="section-title-image scroll-reveal" crossorigin="anonymous" />
       <div class="contact-content">
         <p class="contact-text scroll-reveal">please do not contact me, as i am very busy.</p>
         <p class="contact-text-emphasis scroll-reveal">please, please, please, i am very scared and need to speak with a manager.</p>
