Update watermark to Work Sans font and add to transparent downloads; Add favicon and share image meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Live Fontever</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="other_media/favicon.png" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://livefontever.com/" />
+  <meta property="og:title" content="Live Fontever" />
+  <meta property="og:description" content="Write in Live Fontever - a font made of Bryans" />
+  <meta property="og:image" content="https://livefontever.com/other_media/share_image.png" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://livefontever.com/" />
+  <meta name="twitter:title" content="Live Fontever" />
+  <meta name="twitter:description" content="Write in Live Fontever - a font made of Bryans" />
+  <meta name="twitter:image" content="https://livefontever.com/other_media/share_image.png" />
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet">
