Update FAQ text: remove 'deeply' from appreciate this mindset

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <img src="other_media/FAQ.png" alt="FAQ" class="section-title-image scroll-reveal" crossorigin="anonymous" />
       <div class="faq-content">
         <p class="faq-question scroll-reveal">i can't tell if you're pro or anti-bryan johnson. are you one of his sniveling obedient twitter worshipers or one of his single-braincell deniers who will be left behind in the singularity rapture?</p>
-        <p class="faq-answer scroll-reveal">i am pro-bryan johnson, but not because I even particularly agree with his ideology. what do I very much respect is running mad-scientist-like experiments on yourself, not experimenting on prison populations or indigenous communities or under-informed clinical patients, like a fucking coward. we as a society should just be fucking around and finding out on our own bodies way more and I deeply appreciate this mindset.</p>
+        <p class="faq-answer scroll-reveal">i am pro-bryan johnson, but not because I even particularly agree with his ideology. what do I very much respect is running mad-scientist-like experiments on yourself, not experimenting on prison populations or indigenous communities or under-informed clinical patients, like a fucking coward. we as a society should just be fucking around and finding out on our own bodies way more and I appreciate this mindset.</p>
       </div>
     </section>
 
