Add question mark support and update default text to 'would you spare a little blood for bryan johnson?'

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <input 
           id="textInput" 
           type="text" 
-          value="hello my name is bryan johnson"
+          value="would you spare a little blood for bryan johnson?"
           class="text-input"
         />
       </div>
