--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <input 
           id="textInput" 
           type="text" 
-          value="would you spare a little blood for bryan johnson?"
+          value="would you spare a little blood for bryan?"
           class="text-input"
         />
       </div>
