Add PostHog experiment for default text with 4 variations (control, version-1, version-2, version-3)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <input 
           id="textInput" 
           type="text" 
-          value="would you spare a little blood for bryan?"
+          value=""
           class="text-input"
         />
       </div>
